--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,8 @@ html {
 .content {
   display: flex;
   max-width: 1140px; 
-  gap: 30px;  
+  gap: 30px;
+  
 }
 
 .result {
@@ -50,13 +51,34 @@ html {
 .content__list-container {
   max-height: 298px;
   overflow: scroll;
+  gap: 26px;
 }
 
 .result__video-container {
   width: 711;
   height: 386;
+  object-fit: contain;  
+}
 
+.content__list {
+  gap: 30px;
+  display: grid;
 
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.content__video-card-thumbnail {
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
 }
 
 h1,
