--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
   justify-content: center;
@@ -24,8 +24,7 @@ html {
 .content {
   display: flex;
   max-width: 1140px; 
-  gap: 30px;
-  
+  gap: 30px;  
 }
 
 .result {
@@ -33,6 +32,13 @@ html {
   align-self: flex-end;
   flex-direction: column;
   gap: 10px;
+}
+
+.result__video {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .content__details {
@@ -55,15 +61,18 @@ html {
 }
 
 .result__video-container {
-  width: 711;
-  height: 386;
-  object-fit: contain;  
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  height: 298px;
+  padding-top: 2px;
+  overflow: auto;
 }
 
 .content__list {
   gap: 30px;
   display: grid;
-
 }
 
 .content__video-card {
@@ -75,10 +84,55 @@ html {
 .content__video-card-thumbnail {
   object-fit: cover;
   object-position: center;
+  width: 194px;
+  height: 103px;
 }
 
 .content__video-card-description-container {
+  display: flex;
   flex-grow: 1;
+  flex-direction: column;
+  width: 100%;
+  gap: 6px;
+}
+
+.search-form__fieldset-title {
+  font-family: Fira Sans Condensed;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 100%;
+}
+
+.title {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__video-card-title {
+  overflow: hidden;
+  font-family: "Oswald", sans-serif;
+  font-size: 30px;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.content__video-card-description {
+  line-clamp: 
 }
 
 h1,
